--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# AWS CDK
+**/*/cdk.out
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -165,7 +168,8 @@ cython_debug/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
